# bitcoin-strategies

./: Cargo.toml  Dockerfile
src/: communication.rs  main.rs
src/domain/: actor.rs  bitcoin.rs  dollar.rs  dollars_per_bitcoin.rs  init_response.rs  mod.rs  trade.rs  trade_request.rs  trade_response.rs  transfer.rs  wallet.rs
src/strategies/: average_based.rs  buffer.rs  mod.rs  on_change_bounded.rs  on_every_change.rs  operators.rs  ratio.rs  rise_and_fall.rs
