[package]
name = "bitcoin-strategies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
derive_more = "0.99.17"
reqwest = "0.11.11"
serde = "1"
#rdkafka = "0.28.0"
anyhow = "1"
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0"