[package]
name = "bitcoin-strategies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
#rdkafka = "0.28.0"
anyhow = "1"
env_logger = "0.9.0"
log = "0.4.17"
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"] }